# qt_chat_app

./: .gitignore  CMakeLists.txt  domain.crt  domain.csr  domain.key
App/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
